--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg border-bottom shadow-sm mb-3">
 <div class="container">
-  <a class="navbar-brand" href="./index.html"><strong>CRV Lagoa</strong></a>
+  <a class="navbar-brand" href="/crv-brazil/index.html"><strong>CRV Lagoa</strong></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
     aria-expanded="false" aria-controls="collapseExample">
     <div id="navMenu">
@@ -10,7 +10,13 @@
   <div class="navbar-collapse collapse">
     <ul class="navbar-nav flex-grow-1">
       <li class="nav-item">
-
+        <a class="nav-link" target="_blank"
+          href="/crv-brazil/index.html">
+          <i class="fa-solid fa-house"></i>
+          Início
+        </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" target="_blank"
           href="https://drive.google.com/drive/folders/1GS4X6uBFDWpUAGAZ1diNRfR8M-mhgRaT">
           <i class="fa-brands fa-google-drive"></i>
@@ -24,7 +30,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./condicao-comercial/condicao-comercial.html">
+        <a class="nav-link" href="/crv-brazil/condicao-comercial/condicao-comercial.html">
           <i class="fa-solid fa-sack-dollar"></i>
           Parcelamento
         </a>
@@ -36,7 +42,7 @@
         </a>
         <ul class="dropdown-menu">
           <li>
-            <a class="dropdown-item" target="_blank" href="promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
+            <a class="dropdown-item" target="_blank" href="/crv-brazil/promocoes/herdoptimizer/REGULAMENTO HERDOPTIMIZER.pdf">
               <i class="fa-solid fa-cow"></i>
               Herdoptimizer
             </a>
@@ -48,7 +54,7 @@
             </a>
           </li>
           <li>
-            <a class="dropdown-item" target="_blank" href="./servicos/Lista_Contatos_Internos_CRV_28-02-24 1.pdf">
+            <a class="dropdown-item" target="_blank" href="/crv-brazil/servicos/Lista_Contatos_Internos_CRV_28-02-24 1.pdf">
               <i class="fa-solid fa-address-book"></i>
               Contatos CRV
             </a>
@@ -92,20 +98,20 @@
           Catálogos
         </a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" target="_blank" href="./catalogos-de-touros/corte-zebu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/corte-zebu.pdf">
               <i class="fa-solid fa-book"></i>
               Corte Zebu
             </a></li>
-          <li><a class="dropdown-item" target="_blank" href="./catalogos-de-touros/corte-europeu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/corte-europeu.pdf">
               <i class="fa-solid fa-book"></i>
               Corte Europeu
             </a></li>
           <hr>
-          <li><a class="dropdown-item" target="_blank" href="./catalogos-de-touros/leite-zebu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/leite-zebu.pdf">
               <i class="fa-solid fa-book"></i>
               Leite Zebu
             </a></li>
-          <li><a class="dropdown-item" target="_blank" href="./catalogos-de-touros/leite-europeu.pdf">
+          <li><a class="dropdown-item" target="_blank" href="/crv-brazil/catalogos-de-touros/leite-europeu.pdf">
               <i class="fa-solid fa-book"></i>
               Leite Europeu
             </a></li>
