--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
       </div>
 
   </div>
+  <script src="navbar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="./navbar.js"></script>
   <script>
     Swal.fire({
       title: '<strong>ATENÇÃO</strong>',
