alteração da campanha vigente no mês de junho/24

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 
       <div class="col-sm-4">
         <div class="card mb-3">
-          <img src="./assets/img-cards/raly-do-corte.png" class="card-img-top imgCard" alt="...">
+          <img src="./assets/img-cards/encontro-vet-lider.png" class="card-img-top imgCard" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Rally do Corte</h5>
-            <p class="card-text"><strong>Pasta:</strong> Corte Zebu e Europeu<br><strong>Validade:</strong> 18 de Junho de 2024 (até 18:00h)</p>
+            <h5 class="card-title">Encontro Clube Vetlíder</h5>
+            <p class="card-text"><strong>Pasta:</strong> Corte Zebu e Europeu<br><strong>Validade:</strong> 30 de Junho de 2024 (até 18:00h)</p>
             <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#porteiraAberta">
               Material da Campanha
             </button>
@@ -165,35 +165,35 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Expozebu</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Encontro Clube Vetlíder</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
                 <div class="d-grid gap-2 ">
                   <h6>Documentação</h6>
-                  <a href="./promocoes/RALLY-DO-CORTE/dco.pdf" target="_blank"
+                  <a href="./promocoes/VETLIDER/DCO.pdf" target="_blank"
                     class="btn btn-warning">
                     <i class="fa-solid fa-info"></i>
                     DCO
                   </a>
                   <h6>Corte Zebu</h6>
-                  <a href="./promocoes/RALLY-DO-CORTE/preço-corte-zebu.pdf" target="_blank"
+                  <a href="./promocoes/VETLIDER/PRECO-CORTE-ZEBU.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Preços Convencional
                   </a>
-                  <a href="./promocoes/RALLY-DO-CORTE/catalogo-corte-zebu.pdf" target="_blank"
+                  <a href="./promocoes/VETLIDER/CATALOGO-CORTE-ZEBU.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo
                   </a>
                   <h6>Corte Europeu</h6>
-                  <a href="./promocoes/RALLY-DO-CORTE/preço-corte-europeu.pdf" target="_blank"
+                  <a href="./promocoes/VETLIDER/PRECO-CORTE-EUROPEU.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-file-invoice-dollar"></i>
                     Preços Convencional
                   </a>
-                  <a href="./promocoes/RALLY-DO-CORTE/catalogo-corte-europeu.pdf" target="_blank"
+                  <a href="./promocoes/VETLIDER/CATALOGO-CORTE-EUROPEU.pdf" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-book"></i>
                     Catálogo
