ajuste dos links de pagamentos

--- a/index.html
+++ b/index.html
@@ -112,37 +112,37 @@
                     DCO
                   </a>
                   <h6>Materiais</h6>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/EMBRYO/FOTO1.jpeg" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-image"></i>
                     Foto <i class="fa-solid fa-arrow-right"></i>
                     <img src="./promocoes/EMBRYO/FOTO1.jpeg" height="50px" alt="">
                   </a>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/EMBRYO/FOTO2.jpeg" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-image"></i>
                     Foto <i class="fa-solid fa-arrow-right"></i>
                     <img src="./promocoes/EMBRYO/FOTO2.jpeg" height="50px" alt="">
                   </a>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/EMBRYO/FOTO3.jpeg" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-image"></i>
                     Foto <i class="fa-solid fa-arrow-right"></i>
                     <img src="./promocoes/EMBRYO/FOTO3.jpeg" height="50px" alt="">
                   </a>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/EMBRYO/FOTO4.jpeg" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-image"></i>
                     Foto <i class="fa-solid fa-arrow-right"></i>
                     <img src="./promocoes/EMBRYO/FOTO4.jpeg" height="50px" alt="">
                   </a>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/EMBRYO/FOTO5.jpeg" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-image"></i>
                     Foto <i class="fa-solid fa-arrow-right"></i>
                     <img src="./promocoes/EMBRYO/FOTO5.jpeg" height="50px" alt="">
                   </a>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
+                  <a href="./promocoes/EMBRYO/FOTO6.jpeg" target="_blank"
                     class="btn btn-primary">
                     <i class="fa-solid fa-image"></i>
                     Foto <i class="fa-solid fa-arrow-right"></i>
