--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style-navButton.css">
+  <link rel="stylesheet" href="./libs/validadeCampanha/validadeCampanha.css">
   <script src="https://kit.fontawesome.com/9dd9d649b8.js" crossorigin="anonymous"></script>
 
 
@@ -22,7 +23,7 @@
 </head>
 
 <body>
-  <div id="navbar-container"></div> 
+  <div id="navbar-container"></div>
   <div class="container">
     <!--POLÍTICA COMERCIAL-->
     <h1>Política Comercial</h1>
@@ -81,229 +82,109 @@
 
 
     <div class="row">
-      <div class="col-sm-4 mb-3 mb-sm-0">
-
-        <div class="card mb-3">
-          <img src="./assets/img-cards/1seculo1geracao.png" class="card-img-top img-fluid imgCard" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">CRV Embryo: 1 século em 1 geração</h5>
-            <p class="card-text"><strong>Pasta:</strong> Leite Europeu <br><strong>Validade:</strong> 31 de Julho de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#embryo">
-              Material da Campanha
-            </button>
-          </div>
-        </div>
-
-        <!-- Modal -->
-        <div class="modal fade" id="embryo" tabindex="-1" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">CRV Embryo: 1 século em 1 geração</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="d-grid gap-2 ">
-                  <h6>Documentação</h6>
-                  <a href="./promocoes/EMBRYO/DCO.pdf" target="_blank"
-                    class="btn btn-warning">
-                    <i class="fa-solid fa-info"></i>
-                    DCO
-                  </a>
-                  <h6>Materiais</h6>
-                  <a href="./promocoes/EMBRYO/FOTO1.jpeg" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-image"></i>
-                    Foto <i class="fa-solid fa-arrow-right"></i>
-                    <img src="./promocoes/EMBRYO/FOTO1.jpeg" height="50px" alt="">
-                  </a>
-                  <a href="./promocoes/EMBRYO/FOTO2.jpeg" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-image"></i>
-                    Foto <i class="fa-solid fa-arrow-right"></i>
-                    <img src="./promocoes/EMBRYO/FOTO2.jpeg" height="50px" alt="">
-                  </a>
-                  <a href="./promocoes/EMBRYO/FOTO3.jpeg" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-image"></i>
-                    Foto <i class="fa-solid fa-arrow-right"></i>
-                    <img src="./promocoes/EMBRYO/FOTO3.jpeg" height="50px" alt="">
-                  </a>
-                  <a href="./promocoes/EMBRYO/FOTO4.jpeg" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-image"></i>
-                    Foto <i class="fa-solid fa-arrow-right"></i>
-                    <img src="./promocoes/EMBRYO/FOTO4.jpeg" height="50px" alt="">
-                  </a>
-                  <a href="./promocoes/EMBRYO/FOTO5.jpeg" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-image"></i>
-                    Foto <i class="fa-solid fa-arrow-right"></i>
-                    <img src="./promocoes/EMBRYO/FOTO5.jpeg" height="50px" alt="">
-                  </a>
-                  <a href="./promocoes/EMBRYO/FOTO6.jpeg" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-image"></i>
-                    Foto <i class="fa-solid fa-arrow-right"></i>
-                    <img src="./promocoes/EMBRYO/FOTO6.jpeg" height="50px" alt="">
-                  </a>
-                </div>
-              </div>
-
+        <!--Bloco de promoção-->
+        <div class="col-sm-4 mb-3 mb-sm-0">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./assets/img-cards/1seculo1geracao.png" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">CRV Embryo: 1 século em 1 geração</h5>
+              <p class="card-text"><strong>Pasta:</strong> Leite Europeu<br>
+                <!--Validade da Campanha-->
+                <span class="campanha" data-validade="2024-07-31">
+                  <i class="icon"></i><strong>Validade:</strong> 31 de Julho de 2024 (até 18:00h)
+                </span>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#embryo">
+                Material da Campanha
+              </button>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="col-sm-4 mb-3 mb-sm-0">
+          <!--Fim do Card da Promoção-->
 
-        <div class="card mb-3">
-          <img src="./assets/img-cards/mega-touros.png" class="card-img-top img-fluid imgCard" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Mega Touros</h5>
-            <p class="card-text"><strong>Pasta:</strong> Leite Zebu e Europeu <br><strong>Validade:</strong> 30 de Junho de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#estacaoAntecipada">
-              Material da Campanha
-            </button>
-          </div>
-        </div>
-
-        <!-- Modal -->
-        <div class="modal fade" id="estacaoAntecipada" tabindex="-1" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Mega Touros</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="d-grid gap-2 ">
-                  <h6>Documentação</h6>
-                  <a href="./promocoes/MEGA-TOUROS/DCO.pdf" target="_blank"
-                    class="btn btn-warning">
-                    <i class="fa-solid fa-info"></i>
-                    DCO
-                  </a>
-                  <h6>Leite Europeu</h6>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-EUROPEU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Convencional
-                  </a>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-SEXADO-EUROPEU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Sexado
-                  </a>
-                  <a href="./promocoes/MEGA-TOUROS/CATALOGO-LEITE-EUROPEU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo de Touros
-                  </a>
-                  <h6>Leite Zebu</h6>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-CONVENCIONAL-ZEBU.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Convencional
-                  </a>
-                  <a href="./promocoes/MEGA-TOUROS/PREÇO-SEXADO-ZEBU.pdf" target="_blank" class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Sexado
-                  </a>
-                  <a href="./promocoes/MEGA-TOUROS/CATALOGO-LEITE-ZEBU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo de Touros
-                  </a>
+          <!-- Modal -->
+          <div class="modal fade" id="embryo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">CRV Embryo: 1 século em 1 geração</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-4">
-        <div class="card mb-3">
-          <img src="./assets/img-cards/encontro-vet-lider.png" class="card-img-top imgCard" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Encontro Clube Vetlíder</h5>
-            <p class="card-text"><strong>Pasta:</strong> Corte Zebu e Europeu<br><strong>Validade:</strong> 30 de Junho de 2024 (até 18:00h)</p>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#porteiraAberta">
-              Material da Campanha
-            </button>
-          </div>
-        </div>
-        <div class="modal fade" id="porteiraAberta" tabindex="-1" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Encontro Clube Vetlíder</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="d-grid gap-2 ">
-                  <h6>Documentação</h6>
-                  <a href="./promocoes/VETLIDER/DCO.pdf" target="_blank"
-                    class="btn btn-warning">
-                    <i class="fa-solid fa-info"></i>
-                    DCO
-                  </a>
-                  <h6>Corte Zebu</h6>
-                  <a href="./promocoes/VETLIDER/PRECO-CORTE-ZEBU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Convencional
-                  </a>
-                  <a href="./promocoes/VETLIDER/CATALOGO-CORTE-ZEBU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo
-                  </a>
-                  <h6>Corte Europeu</h6>
-                  <a href="./promocoes/VETLIDER/PRECO-CORTE-EUROPEU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-file-invoice-dollar"></i>
-                    Preços Convencional
-                  </a>
-                  <a href="./promocoes/VETLIDER/CATALOGO-CORTE-EUROPEU.pdf" target="_blank"
-                    class="btn btn-primary">
-                    <i class="fa-solid fa-book"></i>
-                    Catálogo
-                  </a>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/EMBRYO/DCO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <h6>Materiais</h6>
+                    <a href="./promocoes/EMBRYO/FOTO1.jpeg" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-image"></i>
+                      Foto <i class="fa-solid fa-arrow-right"></i>
+                      <img src="./promocoes/EMBRYO/FOTO1.jpeg" height="50px" alt="">
+                    </a>
+                    <a href="./promocoes/EMBRYO/FOTO2.jpeg" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-image"></i>
+                      Foto <i class="fa-solid fa-arrow-right"></i>
+                      <img src="./promocoes/EMBRYO/FOTO2.jpeg" height="50px" alt="">
+                    </a>
+                    <a href="./promocoes/EMBRYO/FOTO3.jpeg" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-image"></i>
+                      Foto <i class="fa-solid fa-arrow-right"></i>
+                      <img src="./promocoes/EMBRYO/FOTO3.jpeg" height="50px" alt="">
+                    </a>
+                    <a href="./promocoes/EMBRYO/FOTO4.jpeg" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-image"></i>
+                      Foto <i class="fa-solid fa-arrow-right"></i>
+                      <img src="./promocoes/EMBRYO/FOTO4.jpeg" height="50px" alt="">
+                    </a>
+                    <a href="./promocoes/EMBRYO/FOTO5.jpeg" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-image"></i>
+                      Foto <i class="fa-solid fa-arrow-right"></i>
+                      <img src="./promocoes/EMBRYO/FOTO5.jpeg" height="50px" alt="">
+                    </a>
+                    <a href="./promocoes/EMBRYO/FOTO6.jpeg" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-image"></i>
+                      Foto <i class="fa-solid fa-arrow-right"></i>
+                      <img src="./promocoes/EMBRYO/FOTO6.jpeg" height="50px" alt="">
+                    </a>
+                  </div>
                 </div>
+
               </div>
             </div>
           </div>
+          <!--Fim da Modal-->
         </div>
-      </div>
+        <!--Fim do Bloco da Promoção-->
 
-  </div>
-  <script src="navbar.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script>
-    Swal.fire({
-      title: '<strong>ATENÇÃO</strong>',
-      icon: 'info',
-      html:
-        'Essa página é apenas para uso interno! <br>' +
-        'Não compartilhe com nenhum cliente. ',
-      focusConfirm: false,
-      confirmButtonText:
-        '<i class="fa fa-thumbs-up"></i> OK!',
-      confirmButtonAriaLabel: 'Thumbs up, great!',
-    })
+    </div>
+    <script src="navbar.js"></script>
+    <script src="./libs/validadeCampanha/validadeCampanha.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+      Swal.fire({
+        title: '<strong>ATENÇÃO</strong>',
+        icon: 'info',
+        html:
+          'Essa página é apenas para uso interno! <br>' +
+          'Não compartilhe com nenhum cliente. ',
+        focusConfirm: false,
+        confirmButtonText:
+          '<i class="fa fa-thumbs-up"></i> OK!',
+        confirmButtonAriaLabel: 'Thumbs up, great!',
+      })
 
-    //button navMenu
-    const navMenu = document.querySelector("#navMenu")
-    navMenu.addEventListener("click", () => {
-      navMenu.classList.toggle("active")
-    })
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+      //button navMenu
+      const navMenu = document.querySelector("#navMenu")
+      navMenu.addEventListener("click", () => {
+        navMenu.classList.toggle("active")
+      })
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
