--- a/navbar.html
+++ b/navbar.html
@@ -3,9 +3,7 @@
   <a class="navbar-brand" href="/crv-brazil/index.html"><strong>CRV Lagoa</strong></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
     aria-expanded="false" aria-controls="collapseExample">
-    <div id="navMenu">
-      <span></span><span></span><span></span>
-    </div>
+      <i class="fa-solid fa-bars"></i>
   </button>
   <div class="navbar-collapse collapse">
     <ul class="navbar-nav flex-grow-1">
