inserção das regras do LAGOA+ na aba de serviços

--- a/navbar.html
+++ b/navbar.html
@@ -57,6 +57,13 @@
               Registro RA
             </a>
           </li>
+          <li>
+            <a class="dropdown-item" target="_blank"
+              href="/crv-brazil/servicos/regras_lagoa+.pdf">
+              <i class="fa-solid fa-user-plus"></i>
+              Lagoa+
+            </a>
+          </li>
         </ul>
       </li>
       <li class="nav-item dropdown">
