ajustando link do navbar

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <!--Fim do Bloco da Promoção-->
 
     </div>
-    <script src="./navbar.html"></script>
+    <script src="./navbar.js"></script>
     <script src="./libs/validadeCampanha/validadeCampanha.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
