inserção da campanha do leilão da EAO

--- a/index.html
+++ b/index.html
@@ -158,6 +158,57 @@
         </div>
         <!--Fim do Bloco da Promoção-->
 
+        <!--Bloco de promoção-->
+        <div class="col-sm-4 mb-3 mb-sm-0">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./promocoes/LEILÃO-EAO/FOTO-CARD.jpg" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Leilão EAO | Mega Evento EAO</h5>
+              <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
+                <!--Validade da Campanha-->
+                <span class="campanha" data-validade="2024-07-14">
+                  <i class="icon"></i><strong>Validade:</strong> 14 de Julho de 2024 (até 18:00h)
+                </span>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#eao">
+                Material da Campanha
+              </button>
+            </div>
+          </div>
+          <!--Fim do Card da Promoção-->
+
+          <!-- Modal -->
+          <div class="modal fade" id="eao" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Leilão EAO | Mega Evento EAO</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/LEILÃO-EAO/dco.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <h6>Materiais</h6>
+                    <a href="./promocoes/LEILÃO-EAO/catalogo.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo - Zebu
+                    </a>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <!--Fim da Modal-->
+        </div>
+        <!--Fim do Bloco da Promoção-->
+
     </div>
     <script src="./navbar.js"></script>
     <script src="./libs/validadeCampanha/validadeCampanha.js"></script>
