inserção da promoção sprint final

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <!--Fim do Bloco da Promoção-->
 
         <!--Bloco de promoção-->
-        <div class="col-sm-4 mb-3 mb-sm-0">
+        <div class="col-sm-4">
           <!--Card da Promoção-->
           <div class="card mb-3">
             <img src="./promocoes/LEILÃO-EAO/FOTO-CARD.jpg" class="card-img-top img-fluid imgCard" alt="...">
@@ -168,7 +168,7 @@
               <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
                 <!--Validade da Campanha-->
                 <span class="campanha" data-validade="2024-07-14">
-                  <i class="icon"></i><strong>Validade:</strong> 14 de Julho de 2024 (até 18:00h)
+                  <i class="icon"></i><strong>Validade:</strong> 11 à 14 de Julho de 2024 (até 18:00h)
                 </span>
                 <!--Fim da Valodade da Campanha-->
               </p>
@@ -198,6 +198,106 @@
                     <a href="./promocoes/LEILÃO-EAO/catalogo.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo - Zebu
+                    </a>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <!--Fim da Modal-->
+        </div>
+        <!--Fim do Bloco da Promoção-->
+        <!--Bloco de promoção-->
+        <div class="col-sm-4">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./assets/img-cards/sprint-final.png" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Campanha Sprint Final</h5>
+              <p class="card-text"><strong>Pasta:</strong> Leite e Corte<br>
+                <!--Validade da Campanha-->
+                <span class="campanha" data-validade="2024-08-31">
+                  <i class="icon"></i><strong>Validade:</strong> 31 de Agosto de 2024 (até 18:00h)
+                </span>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#sprintfinal">
+                Material da Campanha
+              </button>
+            </div>
+          </div>
+          <!--Fim do Card da Promoção-->
+
+          <!-- Modal -->
+          <div class="modal fade" id="sprintfinal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Campanha Sprint Final</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/SPRINT-FINAL/DCO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <h6>Corte Zebu</h6>
+                    <a href="./promocoes/SPRINT-FINAL/CORTE-ZEBU-40DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços > 40 doses
+                    </a>
+                    <a href="./promocoes/SPRINT-FINAL/CORTE-ZEBU-100DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços Mix 1500 doses
+                    </a>
+                    <a href="https://drive.google.com/file/d/1_vYKVq3qGX8Ju61M2pUdfJlZCAAGTYh9/view?usp=drive_link" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo Corte Zebu
+                    </a>
+
+                    <h6>Corte Europeu</h6>
+                    <a href="./promocoes/SPRINT-FINAL/CORTE-EUROPEU-40DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços > 40 doses
+                    </a>
+                    <a href="./promocoes/SPRINT-FINAL/CORTE-EUROPEU-100DS.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços Mix 1500 doses
+                    </a>
+                    <a href="https://drive.google.com/file/d/1DY_zv59XH4oe3py3fn8jDJRqzCAuyCIf/view?usp=drive_link" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo Corte Europeu
+                    </a>
+
+                    <h6>Leite Zebu</h6>
+                    <a href="./promocoes/SPRINT-FINAL/LEITE-ZEBU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços Convencional
+                    </a>
+                    <a href="./promocoes/SPRINT-FINAL/LEITE-ZEBU-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços Sexado
+                    </a>
+                    <a href="https://drive.google.com/file/d/1tBfFgU3NzpDotiZB-eU-bkyzGp52y9Xt/view?usp=drive_link" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo Leite Zebu
+                    </a>
+
+                    <h6>Leite Europeu</h6>
+                    <a href="./promocoes/SPRINT-FINAL/LEITE-EUROPEU-CONVENCIONAL.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços Convencional
+                    </a>
+                    <a href="./promocoes/SPRINT-FINAL/LEITE-EUROPEU-SEXADO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços Sexado
+                    </a>
+                    <a href="https://drive.google.com/file/d/1XM69u75irwgDTg4F492K4ngUVFVuCjlq/view?usp=drive_link" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo Leite Europeu
                     </a>
                   </div>
                 </div>
