inserção da lógica de desativar botão após o vencimento da campanha

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </span>
                 <!--Fim da Valodade da Campanha-->
               </p>
-              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#embryo">
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#embryo">
                 Material da Campanha
               </button>
             </div>
@@ -172,7 +172,7 @@
                 </span>
                 <!--Fim da Valodade da Campanha-->
               </p>
-              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#eao">
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#eao">
                 Material da Campanha
               </button>
             </div>
@@ -217,12 +217,12 @@
               <h5 class="card-title">Campanha Sprint Final</h5>
               <p class="card-text"><strong>Pasta:</strong> Leite e Corte<br>
                 <!--Validade da Campanha-->
-                <span class="campanha" data-validade="2024-08-31">
+                <span class="campanha" data-validade="2024-08-31"> 
                   <i class="icon"></i><strong>Validade:</strong> 31 de Agosto de 2024 (até 18:00h)
                 </span>
                 <!--Fim da Valodade da Campanha-->
               </p>
-              <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#sprintfinal">
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#sprintfinal">
                 Material da Campanha
               </button>
             </div>
