inserção da promoção da campanha katayama

--- a/index.html
+++ b/index.html
@@ -361,6 +361,65 @@
         </div>
         <!--Fim do Bloco da Promoção-->
 
+        <!--Bloco de promoção-->
+        <div class="col-sm-4">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./assets/img-cards/CAMPANHA-KATAYAMA.png" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Campanha Katayama</h5>
+              <p class="card-text"><strong>Pasta:</strong> Leite e Corte<br>
+                <!--Validade da Campanha-->
+                <div class="campanha" data-validade="2024-08-31"> 
+                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Agosto de 2024 (até 18:00h)
+                </div>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#KATAYAMA">
+                Material da Campanha
+              </button>
+            </div>
+          </div>
+          <!--Fim do Card da Promoção-->
+
+          <!-- Modal -->
+          <div class="modal fade" id="KATAYAMA" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Campanha Katayama</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/SEMANA-KATAYAMA/DCO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <h6>Corte Zebu</h6>
+                    <a href="./promocoes/SEMANA-KATAYAMA/PRECO-ACIMA-DE-40-DOSES.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços > 40 doses
+                    </a>
+                    <a href="./promocoes/SEMANA-KATAYAMA/PRECO-ACIMA-DE-500-DOSES.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Preços Mix 500 doses
+                    </a>
+                    <a href="./promocoes/SEMANA-KATAYAMA/CATALOGO.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-book"></i>
+                      Catálogo Semana Katayama
+                    </a>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <!--Fim da Modal-->
+        </div>
+        <!--Fim do Bloco da Promoção-->
+
     </div>
     <script src="./navbar.js"></script>
     <script src="./libs/validadeCampanha/validadeCampanha.js"></script>
