ajuste na pasta da campanha katayama

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <img src="./assets/img-cards/CAMPANHA-KATAYAMA.png" class="card-img-top img-fluid imgCard" alt="...">
             <div class="card-body">
               <h5 class="card-title">Campanha Katayama</h5>
-              <p class="card-text"><strong>Pasta:</strong> Leite e Corte<br>
+              <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
                 <!--Validade da Campanha-->
                 <div class="campanha" data-validade="2024-08-31"> 
                   <i class="icon"></i><strong>Validade:</strong><br> 31 de Agosto de 2024 (até 18:00h)
