criação do teste de parcelamento

--- a/condicao-comercial/condicao-comercial.html
+++ b/condicao-comercial/condicao-comercial.html
@@ -16,9 +16,16 @@
 
 <body>
   <div id="navbar-container"></div>
-  <div class="container">
-    <h1 class="text-center">Condição Comercial</h1>
-    
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6 d-flex justify-content-start align-items-center">
+        <h1 class="mr-auto">Política de Parcelamento</h1>
+      </div>
+      <div class="col-md-6 d-flex justify-content-end align-items-center">
+        <a href="./teste-condicao.html" class="btn btn-primary">Teste de Condição</a>
+      </div>
+    </div>
+    <hr>
     <div class="text-center mb-3">
       <img src="SEMEN-CORTE.png" class="img-fluid" alt="Condição Comercial Corte">
     </div>
