--- a/condicao-comercial/teste-condicao.html
+++ b/condicao-comercial/teste-condicao.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div id="navbar-container"></div>
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6 d-flex justify-content-start align-items-center">
