inserção da tabela de parição no menu serviços

--- a/navbar.html
+++ b/navbar.html
@@ -64,28 +64,11 @@
               Lagoa+
             </a>
           </li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          Consulta Pública
-        </a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" target="_blank" href="https://www.ancp.org.br/consulta-de-touros/">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              ANCP
-            </a>
-          </li>
-          <li><a class="dropdown-item" target="_blank"
-              href="https://www.abcz.org.br/pmgz/consultar-avaliacoes-geneticas/deca">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              PMGZ
-            </a>
-          </li>
-          <li><a class="dropdown-item" target="_blank" href="https://gppluson.geneplus.com.br/">
-              <i class="fa-solid fa-magnifying-glass"></i>
-              GENEPLUS
+          <li>
+            <a class="dropdown-item" target="_blank"
+              href="/crv-brazil/servicos/tabela-paricao.pdf">
+              <i class="fa-solid fa-venus-mars"></i>
+              Tabela de Parição
             </a>
           </li>
         </ul>
