--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="card mb-3">
             <img src="./assets/img-cards/sprint-final.png" class="card-img-top img-fluid imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Campanha Sprint Final</h5>
+              <h5 class="card-title">Sprint Final</h5>
               <p class="card-text"><strong>Pasta:</strong> Leite e Corte<br>
                 <!--Validade da Campanha-->
                 <div class="campanha" data-validade="2024-08-31"> 
@@ -108,7 +108,7 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Campanha Sprint Final</h1>
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Sprint Final</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -189,7 +189,7 @@
           <div class="card mb-3">
             <img src="./assets/img-cards/CAMPANHA-KATAYAMA.png" class="card-img-top img-fluid imgCard" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Campanha Katayama</h5>
+              <h5 class="card-title">Semana Katayama</h5>
               <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
                 <!--Validade da Campanha-->
                 <div class="campanha" data-validade="2024-08-31"> 
@@ -209,7 +209,7 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Campanha Katayama</h1>
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Semana Katayama</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -231,6 +231,66 @@
                     <a href="./promocoes/SEMANA-KATAYAMA/CATALOGO.pdf" target="_blank" class="btn btn-primary">
                       <i class="fa-solid fa-book"></i>
                       Catálogo Semana Katayama
+                    </a>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <!--Fim da Modal-->
+        </div>
+        <!--Fim do Bloco da Promoção-->
+
+        <!--Bloco de promoção-->
+        <div class="col-sm-4">
+          <!--Card da Promoção-->
+          <div class="card mb-3">
+            <img src="./promocoes/EXPOGENETICA/IMG-CARD.jpg" class="card-img-top img-fluid imgCard" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Expogenética 2024</h5>
+              <p class="card-text"><strong>Pasta:</strong> Corte Zebu<br>
+                <!--Validade da Campanha-->
+                <div class="campanha" data-validade="2024-08-31"> 
+                  <i class="icon"></i><strong>Validade:</strong><br> 31 de Agosto de 2024 (até 18:00h)
+                </div>
+                <!--Fim da Valodade da Campanha-->
+              </p>
+              <button type="button" class="btn btn-success btn-campanha" data-bs-toggle="modal" data-bs-target="#EXPOGENETICA">
+                Material da Campanha
+              </button>
+            </div>
+          </div>
+          <!--Fim do Card da Promoção-->
+
+          <!-- Modal -->
+          <div class="modal fade" id="EXPOGENETICA" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Expogenética 2024</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="d-grid gap-2 ">
+                    <h6>Documentação</h6>
+                    <a href="./promocoes/EXPOGENETICA/DCO.pdf" target="_blank" class="btn btn-warning">
+                      <i class="fa-solid fa-info"></i>
+                      DCO
+                    </a>
+                    <h6>Material da Campanha</h6>
+                    <a href="./promocoes/EXPOGENETICA/TABELA SEMEN.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Tabela Sêmen
+                    </a>
+                    <a href="./promocoes/EXPOGENETICA/TABELA EMBRIOES.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Tabela Embriões
+                    </a>
+                    <hr>
+                    <a href="./promocoes/EXPOGENETICA/COMISSOES.pdf" target="_blank" class="btn btn-primary">
+                      <i class="fa-solid fa-file-invoice-dollar"></i>
+                      Tabela de Comissão
                     </a>
                   </div>
                 </div>
